// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`utils > should get color names 1`] = `
[
  "black",
  "white",
  "gray",
  "mauve",
  "slate",
  "sage",
  "olive",
  "sand",
  "tomato",
  "red",
  "ruby",
  "crimson",
  "pink",
  "plum",
  "purple",
  "violet",
  "iris",
  "indigo",
  "blue",
  "cyan",
  "teal",
  "jade",
  "green",
  "grass",
  "bronze",
  "gold",
  "brown",
  "orange",
  "amber",
  "yellow",
  "lime",
  "mint",
  "sky",
]
`;

exports[`utils > should get color names 2`] = `
[
  "tomato",
  "red",
  "ruby",
  "crimson",
  "pink",
  "plum",
  "purple",
  "violet",
  "iris",
  "indigo",
  "blue",
  "cyan",
  "teal",
  "jade",
  "green",
  "grass",
  "bronze",
  "gold",
  "brown",
  "orange",
  "amber",
  "yellow",
  "lime",
  "mint",
  "sky",
]
`;

exports[`utils > should get color names 3`] = `
[
  "gray",
  "mauve",
  "slate",
  "sage",
  "olive",
  "sand",
]
`;

exports[`utils > should get radix color 1`] = `
[
  "oklch(0% 0 none / 0.05)",
  "oklch(0% 0 none / 0.1)",
  "oklch(0% 0 none / 0.15)",
  "oklch(0% 0 none / 0.2)",
  "oklch(0% 0 none / 0.3)",
  "oklch(0% 0 none / 0.4)",
  "oklch(0% 0 none / 0.5)",
  "oklch(0% 0 none / 0.6)",
  "oklch(0% 0 none / 0.7)",
  "oklch(0% 0 none / 0.8)",
  "oklch(0% 0 none / 0.9)",
  "oklch(0% 0 none / 0.95)",
]
`;

exports[`utils > should transform color to string 1`] = `"oklch(56.35% 0.2408 260.8)"`;

exports[`utils > should transform color to string 2`] = `"oklch(85.78% 0.0714 146.8)"`;

exports[`utils > should transform color to string 3`] = `"oklch(0% 0 0)"`;

exports[`utils > should transform color to string 4`] = `"oklch(100% 0 none)"`;
